<resources>
    <string name="app_name">Қуръони Карим UZ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="setings">Созламалар</string>
    <string name="setings2">Қоронғу режими</string>
    <string name="language">Тил</string>
    <string name="russian">Русский</string>
    <string name="tajik">Тоҷикӣ</string>
    <string name="uzbek">Ӯзбек (Кирилл)</string>
    <string name="uzbekL">O\'zbek (Lotin)</string>
    <string name="strLanguange">Тилни танланг</string>
    <string name="strVersion">Версия</string>
    <string name="info">Дастур ҳақида</string>
    <string name="share">Улашиш</string>
    <string name="rate">Баҳолаш</string>
    <string name="adApp_name">(AD) Мен ҳам намоз ӯқийман</string>
    <string name="moreApps">(AD) Бошқа иловалар</string>
    <string name="support">Қўллаб-қувватлаш</string>
    <string name="subject">Фон</string>
    <string name="subject1">Тизимли</string>
    <string name="subject2">Қора</string>
    <string name="subject3">Ёрқин</string>
    <string name="banner_ad_unit_id">ca-app-pub-3072438805806249/4456536944</string>
</resources>