<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_nights_stay2"
        android:title="@string/setings2" />


    <item android:title="@string/support">

        <menu>
            <item
                android:id="@+id/like"
                android:icon="@drawable/ic_like"
                android:title="@string/rate" />
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_outline_share"
                android:title="@string/share" />
            <item
                android:id="@+id/namoz"
                android:icon="@drawable/ic_shop"
                android:title="@string/adApp_name" />
            <item
                android:id="@+id/apps"
                android:icon="@drawable/ic_apps"
                android:title="@string/moreApps" />
        </menu>

    </item>


</menu>